--- a/web-module/src/main/resources/application.properties
+++ b/web-module/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.show-sql=true
 spring.mail.host=127.0.0.1
 spring.mail.port=1025
 spring.mail.username=sender@gmail.com
+
+spring.thymeleaf.cache=false
+spring.web.resources.cache.period=0
